syntax = "proto3";

option csharp_namespace = "PlatformService";

// README!!! This is the client contract this microservice uses when connecting to the server (PlatformService)


service GrpcPlatform {
    rpc GetAllPlatforms(GetAllRequest) returns (PlatformResponse);
}

message GetAllRequest {}

message GrpcPlatformModel {
    int32 platformId = 1;
    string name = 2;
    string publisher = 3;
}

message PlatformResponse {
    repeated GrpcPlatformModel platform = 1;
}